; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/transport/udp/extr_udp.c_UDPAllocatePort.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/transport/udp/extr_udp.c_UDPAllocatePort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UDPPorts = common dso_local global i32 0, align 4
@UDP_STARTING_PORT = common dso_local global i64 0, align 8
@UDP_DYNAMIC_PORTS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @UDPAllocatePort(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = call i64 @AllocatePort(i32* @UDPPorts, i64 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %6
  %11 = load i64, i64* %3, align 8
  store i64 %11, i64* %2, align 8
  br label %19

12:                                               ; preds = %6
  store i64 -1, i64* %2, align 8
  br label %19

13:                                               ; preds = %1
  %14 = load i64, i64* @UDP_STARTING_PORT, align 8
  %15 = load i64, i64* @UDP_STARTING_PORT, align 8
  %16 = load i64, i64* @UDP_DYNAMIC_PORTS, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i64 @AllocatePortFromRange(i32* @UDPPorts, i64 %14, i64 %17)
  store i64 %18, i64* %2, align 8
  br label %19

19:                                               ; preds = %13, %12, %10
  %20 = load i64, i64* %2, align 8
  ret i64 %20
}

declare dso_local i64 @AllocatePort(i32*, i64) #1

declare dso_local i64 @AllocatePortFromRange(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
